# tools

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  install
.github/workflows/: ci.yml
.impeccable/: design.json
apps/desktop/: README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: check-accessibility.mjs  check-local-install.sh  check-macos-release.sh  check-public-release-prereqs.sh  check-release-artifacts.mjs  check-release-metadata.mjs  check-ui-contract.mjs  check-workspaces.mjs  embed-cli-tools.sh  install-local-app.sh  package-macos-release.sh  release-macos-public.sh  write-homebrew-cask.mjs  write-release-manifest.mjs  write-release-notes.mjs
apps/desktop/src/: App.tsx  styles.css  toolRegistry.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/ut-codex-usage/: Cargo.toml
crates/ut-codex-usage/src/: lib.rs  main.rs
crates/ut-list/: Cargo.toml
crates/ut-list/src/: lib.rs  main.rs
crates/ut-repo-snapshot/: Cargo.toml
crates/ut-repo-snapshot/src/: lib.rs  main.rs
scripts/: check-cli-tools.sh  privacy-scan.sh
shell/: fish.fish  zsh.zsh
tools/codex-usage/: README.md  codex_usage_range_report.py  tool.toml
tools/command-index/: README.md  tool.toml
tools/repo-snapshot/: README.md  tool.toml
