[package]
name = "ut-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
ut-codex-usage = { path = "../../../crates/ut-codex-usage" }
ut-list = { path = "../../../crates/ut-list" }
ut-repo-snapshot = { path = "../../../crates/ut-repo-snapshot" }
